# RhymeCraft

./: .gitignore  Cargo.toml  Readme.md  build.rs  build_windows_msys.sh
data/: a4_font.tga  bob_selected.cfg  death.cfg  dragon.cfg  dragon_sprite.cfg  duck.cfg  duck_sprite.cfg  fire.cfg  flag_enemy.cfg  flag_ours_moves_left.cfg  flag_ours_no_moves.cfg  goblin.cfg  goblin_sprite.cfg  magic_circle.cfg  map0.cfg  map1.cfg  map2.cfg  map3.cfg  path_attack.cfg  path_end.cfg  path_marker.cfg  slash.cfg  spawn.cfg  spells.cfg  wizard.cfg  wizard_sprite.cfg
src/: animation.rs  announce.rs  craft.rs  cursor.rs  debug_draw.rs  effect.rs  game_state.rs  game_ui.rs  main.rs  main_menu.rs  map.rs  parent.rs  path.rs  turn.rs  unit.rs  util.rs
src/engine/: bitmap_cache.rs  id_map.rs  mod.rs  world.rs
